# data-node

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.MD  docker-compose.api-gateway.yml  docker-compose.traefik.yml  docker-compose.yml
docs/: api.md
src/: main.rs
src/config/: mod.rs  redis_config.rs
src/models/: delete_request.rs  mod.rs  search_request.rs
src/routes/: add.rs  delete.rs  echo.rs  hello.rs  index.rs  mod.rs  search.rs  status.rs
src/services/: redis_service.rs
src/utils/: date_utils.rs
