[package]
name = "data-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
redis = { version = "0.24.0", features = ["aio", "tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
config = "0.14"
mobc = "0.8.3" 
mobc-redis = "0.8.2"
env_logger = "0.11.2"